# llm-profiling.github.io

./: LICENSE  README.md  _config.yml
lmtracer/: lmtracer_bootstrap.pth  pyproject.toml  setup.py
lmtracer/csrc/: globaltimer.cu  layout.h  timer_kernel.cu  timer_kernel.cuh  timer_mem.cu  timer_op.cu
lmtracer/examples/: multi_exporter_config.yaml  qwen_vllm.yaml
lmtracer/lmtracer/core/: decorators.py  dump_parser.py  env_config.py  exporter.py  hooks.py  logger.py  metrics.py  probe_config.py  probe_context.py  process_binder.py  stack_trace.py  time_sync.py  trace_buffer.py  utils.py
lmtracer/lmtracer/cuda/: globaltimer.pyi  timer_kernel.pyi  timer_mem.pyi
lmtracer/lmtracer/plugins/megatron/: __init__.py  training.py
lmtracer/lmtracer/plugins/sglang/srt/model_executor/: model_runner.py
lmtracer/lmtracer/plugins/torch/_inductor/: __init__.py  cuda_combined_scheduling.py  scheduler.py  wrapper.py
lmtracer/lmtracer/plugins/vllm/: __init__.py  platform.py
lmtracer/lmtracer/plugins/vllm/v1/worker/: lmtracer_gpu_model_runner.py  lmtracer_gpu_worker.py
lmtracer/lmtracer/presets/megatron/: preset_gpt_oss.yaml
lmtracer/lmtracer/presets/sglang/: preset.yaml  preset_deepseek.yaml  preset_gemma.yaml  preset_gpt_oss.yaml  preset_llama.yaml  preset_qwen3.yaml
lmtracer/lmtracer/presets/vllm/: preset.yaml  preset_deepseek.yaml  preset_gemma.yaml  preset_gpt_oss.yaml  preset_llama.yaml  preset_qwen3.yaml
lmtracer/tests/: openai_perf.py  run_benchmark.py  vllm-test.yaml
lmtracer/tools/: dist_cmd.py  dump_parser.py  dump_parser_multitrack.py
